--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
+    <div class="turno-display">
+      <h1 id="numero-turno">0</h1>
+      <p class="texto-turno">Por favor, acérquese al mostrador</p>
+      <button id="botonAnterior">Anterior</button>
+      <button id="botonSiguiente">Siguiente</button>
+      <button id="reset">Reset</button>
+      <p id="turnoPersonalizado">
+        <input type="number" id="inputTurno" />
+        <button id="botonCambiarTurno">Cambiar Turno</button>
+    </p>
     </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
